plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'com.mahee.butterknife'
version '1.0.0'

repositories {
    mavenCentral()
    jcenter()
    google()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

runIde {
    // Absolute path to the installed targetIDE to use as IDE Development Instance
    // Note the Contents directory must be added at the end of the path for macOS.
    ideDirectory 'C:\\Program Files\\Android\\Android Studio'
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', 'android']
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
//  alternativeIdePath 'C:\\Program Files\\Android\\Android Studio'
    version '201.8743.12'
    type 'IC'              // Use IntelliJ IDEA CE because it's the basis of the IntelliJ Platform
    pluginName 'ButterKnife for Android Studio'
    updateSinceUntilBuild false
}

dependencies{
    implementation 'org.apache.commons:commons-lang3:3.6'
}

patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}

patchPluginXml {
    changeNotes """
      Initial Release
      """
}

test {
    useJUnitPlatform()
}